# Spir_Enterprise

./: .env.example  .gitignore  Procfile  _diag2_0001.py  _diag3_0001.py  _diag4_0001.py  _diag5_0001.py  _diag6_0001.py  _diag7_0001.py  _diag_0001.py  app.py  docker-compose.yml  gap_analysis_full.txt  lost_code.patch  migration_extraction_history.sql  procfile  pyproject.toml  railway.json  railway.toml  requirements.txt  test_spir_extractor.py  worker.py
.claude/: claude.md  settings.local.json
backend/: requirements.txt
backend/app/: config.py  main.py  pipeline.py  routes.py
backend/extraction/: dispatcher.py  output_schema.py  position_number.py  post_processor_v2.py  spf_number.py  spir_detector.py  spir_extractor.py  spir_extractor_backup.py
backend/models/: spir_schema.py
backend/services/: currency_service.py  duplicate_checker.py  (+2 more)
config/: keywords.yaml
deploy/: cleanup-stale.sh  logrotate-spir.conf  nginx.conf  ops-commands.sh  spir-api.service  spir-cleanup.service  spir-cleanup.timer  spir-worker.service
frontend/: .env.local  ecosystem.config.js  index.html  middleware.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: migrate_storage.py
src/: requirements.txt
templates/: VEN-4460-DGTYP-5-43-1301 Rev.A_Extraction(wrong output).xlsx
test_files/: 1. VEN-4460-KAHS-5-43-1002-2 (SPIR 1).xlsm
tests/: .gitignore  conftest.py  test_header_detector.py  test_pipeline.py  test_post_processor.py  test_tag_locator.py  test_unified_extractor.py
workers/: celery_app.py  tasks.py
(+134 files in other folders)
